2013-04-17  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Prototyping