@@ -28,11 +28,14 @@ $BACK_PATH = $GLOBALS['BACK_PATH'] . TYPO3_mainDir;
 /**
  * Class to be used to initialize the Sphinx Python Documentation Generator locally.
  *
- * @category    Initialization Modules
- * @package     tx_sphinx
+ * @category    Extension Manager
+ * @package     TYPO3
+ * @subpackage  tx_sphinx
  * @author      Xavier Perseguers <xavier@causal.ch>
  * @copyright   2013 Causal Sàrl
+ * @copyright   Causal Sàrl
  * @license     http://www.gnu.org/copyleft/gpl.html
+ * @version     SVN: $Id$
  */
 class ext_update extends t3lib_SCbase {
 
@@ -56,39 +59,152 @@ class ext_update extends t3lib_SCbase {
 	 * @return string HTML to display
 	 */
 	public function main() {
-		$content = '';
+		$out = array();
 
-		$python = $this->getPython();
-		if (!$python['cmd']) {
-			$content .= $this->formatError('Python interpreter was not found.');
-			return $content;
+		$errors = $this->initializeEnvironment();
+		if (count($errors) > 0) {
+			foreach ($errors as $error) {
+				$out[] = $this->formatError($error);
+			}
+			return implode(LF, $out);
 		}
 
-		$content .= $this->formatInformation(
-			sprintf('%s found as %s.', $python['version'], $python['cmd'])
+		$availableVersions = $this->getSphinxAvailableVersions();
+		$localVersions = $this->getLocalVersions();
+		$importVersion = t3lib_div::_POST('sphinx_version');
+		if ($importVersion && isset($availableVersions[$importVersion]) && !t3lib_div::inArray($localVersions, $importVersion)) {
+			$this->importSphinx($availableVersions[$importVersion], $out);
+			$localVersions = $this->getLocalVersions();
+		}
+
+		$out[] = '<form action="' . t3lib_div::linkThisScript() . '" method="post">';
+		$out[] = '<p>Following versions of Sphinx may be installed locally:</p>';
+
+		$i = 0;
+		foreach ($availableVersions as $version) {
+			$out[] = '<div style="margin-top:1ex">';
+			$disabled = t3lib_div::inArray($localVersions, $version['name']) ? ' disabled="disabled"' : '';
+			$out[] = '<input type="radio" id="sphinx_version_' . $i . '" name="sphinx_version" value="' . htmlspecialchars($version['name']) . '"' . $disabled . ' />';
+			$label = '<label for="sphinx_version_' . $i . '">';
+			if ($disabled) {
+				$label .= '<strong>' . htmlspecialchars($version['name']) . '</strong> (available locally)';
+			} else {
+				$label .= htmlspecialchars($version['name']);
+			}
+			$label .= '</label>';
+			$out[] = $label;
+			$out[] = '</div>';
+			$i++;
+		}
+
+		$out[] = '<button type="submit">Import</button>';
+		$out[] = '</form>';
+
+		return implode(LF, $out);
+	}
+
+	/**
+	 * Initializes the environment and returns error messages, if any.
+	 *
+	 * @return array
+	 */
+	protected function initializeEnvironment() {
+		$errors = array();
+
+		if (!t3lib_exec::checkCommand('python')) {
+			$errors[] = 'Python interpreter was not found.';
+		}
+		if (!t3lib_exec::checkCommand('unzip')) {
+			$errors[] = 'Unzip cannot be executed.';
+		}
+
+		$directories = array(
+			'Resources/Private/sphinx',
+			'Resources/Private/sphinx-sources',
+			'Resources/Private/tmp',
+		);
+		foreach ($directories as $directory) {
+			$path = t3lib_extMgm::extPath($this->extKey) . $directory;
+			if (!is_dir($path)) {
+				t3lib_div::mkdir_deep($path);
+			}
+			if (is_dir($path)) {
+				if (!is_writable($path)) {
+					$errors[] = 'Directory ' . $directory . ' is read-only.';
+				}
+			} else {
+				$errors[] = 'Cannot create directory ' . $directory . '.';
+			}
+		}
+
+		return $errors;
+	}
+
+	/**
+	 * Returns a list of online available versions of Sphinx.
+	 *
+	 * @return array
+	 */
+	protected function getSphinxAvailableVersions() {
+		$sphinxUrl = 'https://bitbucket.org/birkenfeld/sphinx/downloads';
+
+		$cacheFilename = PATH_site . 'typo3temp/' . $this->extKey . '.' . md5($sphinxUrl) . '.html';
+		if (!file_exists($cacheFilename) || filemtime($cacheFilename) < (time() - 86400)) {
+			$html = \t3lib_div::getURL($sphinxUrl);
+			\t3lib_div::writeFile($cacheFilename, $html);
+		} else {
+			$html = file_get_contents($cacheFilename);
+		}
+
+		$tagsHtml = substr($html, strpos($html, '<section class="tabs-pane" id="tag-downloads">'));
+		$tagsHtml = substr($tagsHtml, 0, strpos($tagsHtml, '</section>'));
+
+		$versions = array();
+		preg_replace_callback(
+			'#<tr class="iterable-item">.*?<td class="name"><a href="[^>]+>([^<]*)</a></td>.*?<a href="([^"]+)">zip</a>#s',
+			function($matches) use (&$versions) {
+				if ($matches[1] !== 'tip') {
+					$versions[$matches[1]] = array(
+						'name' => $matches[1],
+						'url'  => $matches[2],
+					);
+				}
+			},
+			$tagsHtml
 		);
 
-		$privateDirectory = t3lib_extMgm::extPath($this->extKey) . 'Resources/Private/';
+		krsort($versions);
+		return $versions;
+	}
 
-		if (!file_exists($privateDirectory)) {
-			t3lib_div::mkdir_deep($privateDirectory);
-			t3lib_div::mkdir_deep($privateDirectory . 'tmp');
-			t3lib_div::mkdir_deep($privateDirectory . 'sphinx');
-			t3lib_div::mkdir_deep($privateDirectory . 'sphinx-sources');
+	/**
+	 * Returns a list of locally available versions of Sphinx.
+	 *
+	 * @return array
+	 */
+	protected function getLocalVersions() {
+		$sphinxPath = t3lib_extMgm::extPath($this->extKey) . 'Resources/Private/sphinx';
+		$versions = array();
+		if (is_dir($sphinxPath)) {
+			$versions = t3lib_div::get_dirs($sphinxPath);
 		}
+		return $versions;
+	}
 
-		if (!is_writable($privateDirectory . 'tmp/')) {
-			$content .= $this->formatError('Directory Resources/Private/tmp/ is not writable');
-			return $content;
-		}
-		if (!is_writable($privateDirectory . 'sphinx-sources/')) {
-			$content .= $this->formatError('Directory Resources/Private/sphinx-sources/ is not writable');
-			return $content;
-		}
-		if (!is_writable($privateDirectory . 'sphinx/')) {
-			$content .= $this->formatError('Directory Resources/Private/sphinx/ is not writable');
-			return $content;
-		}
+	/**
+	 * Imports a given version from Sphinx.
+	 *
+	 * @param array $data
+	 * @param array &$out
+	 * @return void
+	 */
+	protected function importSphinx(array $data, array &$out) {
+		$version = $data['name'];
+		$url = 'https://bitbucket.org' . $data['url'];
+
+		$tempPath = t3lib_extMgm::extPath($this->extKey) . 'Resources/Private/tmp/';
+		$sphinxSourcesPath = t3lib_extMgm::extPath($this->extKey) . 'Resources/Private/sphinx-sources/';
+		$sphinxPath = t3lib_extMgm::extPath($this->extKey) . 'Resources/Private/sphinx/';
 
 		// TEST (begin)
 		/*
@@ -109,115 +225,60 @@ class ext_update extends t3lib_SCbase {
 		*/
 		// TEST (end)
 
-		$zipFile = $privateDirectory . 'tmp/1.1.3.zip';
-		if (!file_exists($zipFile)) {
-			$sphinxSources = 'https://bitbucket.org/birkenfeld/sphinx/get/1.1.3.zip';
-			$zip = t3lib_div::getUrl($sphinxSources);
-			if ($zip && t3lib_div::writeFile($zipFile, $zip)) {
-				$content .= $this->formatInformation('Sphinx 1.1.3 has been downloaded.');
+		$zipFilename = $tempPath . $version . 'zip';
+		$zipContent = t3lib_div::getUrl($url);
+		if ($zipContent && t3lib_div::writeFile($zipFilename, $zipContent)) {
+			$out[] = $this->formatInformation('Sphinx ' . $version . ' has been downloaded.');
+			$targetPath = $sphinxSourcesPath . $version;
+			t3lib_div::rmdir($targetPath, TRUE);
+			t3lib_div::mkdir($targetPath);
 
-				$target = $privateDirectory . 'sphinx-sources/1.1.3';
-				t3lib_div::rmdir($target, TRUE);
-				t3lib_div::mkdir($target);
-
-				$unzipPath = trim($GLOBALS['TYPO3_CONF_VARS']['BE']['unzip_path']);
-				if (substr($unzipPath, -1) !== '/' && is_dir($unzipPath)) {
-					// Make sure the path ends with a slash
-					$unzipPath .= '/';
+			$unzip = t3lib_exec::getCommand('unzip');
+			$cmd = $unzip . ' -qq ' . escapeshellarg($zipFilename) . ' -d ' . escapeshellarg($targetPath);
+			t3lib_utility_Command::exec($cmd, $_, $ret);
+			if ($ret === 0) {
+				$out[] = $this->formatInformation('Sphinx ' . $version . ' has been unpacked.');
+				// When unzipping the sources, content is located under a directory "birkenfeld-sphinx-<hash>"
+				$directories = t3lib_div::get_dirs($targetPath);
+				if (t3lib_div::isFirstPartOfStr($directories[0], 'birkenfeld-sphinx-')) {
+					$fromDirectory = escapeshellarg($targetPath . '/' . $directories[0]);
+					$cmd = 'mv ' . $fromDirectory . '/* ' . escapeshellarg($targetPath . '/');
+					t3lib_utility_Command::exec($cmd);
+					t3lib_div::rmdir($targetPath . '/' . $directories[0], TRUE);
 				}
-				if (is_dir($unzipPath)) {
-					$unzipPath .= 'unzip';
-				}
-				$cmd = $unzipPath . ' -qq ' . escapeshellarg($zipFile) . ' -d ' . escapeshellarg($target);
-				t3lib_utility_Command::exec($cmd, $_, $ret);
-				if ($ret === 0) {
-					$content .= $this->formatInformation('Sphinx 1.1.3 has been unpacked to Resources/Private/sphinx-sources/1.1.3.');
-					// When unzipping the sources, content is located under a directory "birkenfeld-sphinx-<hash>"
-					$directories = t3lib_div::get_dirs($target);
-					if (t3lib_div::isFirstPartOfStr($directories[0], 'birkenfeld-sphinx-')) {
-						$fromDirectory = escapeshellarg($target . '/' . $directories[0]);
-						$cmd = 'mv ' . $fromDirectory . '/* ' . escapeshellarg($target . '/');
-						t3lib_utility_Command::exec($cmd);
-						t3lib_div::rmdir($target . '/' . $directories[0], TRUE);
-					} else {
-						$content .= $this->formatError('Could not locate folder starting with birkenfeld-sphinx- in Resources/Private/sphinx-sources/1.1.3/.');
-					}
-				} else {
-					$content .= $this->formatError('Could not extract Sphinx 1.1.3 to Resources/Private/sphinx-sources/1.1.3:' . LF . $cmd);
-				}
+			} else {
+				$out[] = $this->formatError('Could not extract Sphinx ' . $version . ':' . LF . $cmd);
 			}
+		} else {
+			$out[] = $this->formatError('Cannot fetch file ' . $url . '.');
 		}
-		$setupFile = $privateDirectory . 'sphinx-sources/1.1.3/setup.py';
+
+		$setupFile = $sphinxSourcesPath . $version . '/setup.py';
 		if (is_file($setupFile)) {
+			$python = t3lib_exec::getCommand('python');
 			$cmd = 'cd ' . escapeshellarg(dirname($setupFile)) . ' && ' .
-				$python['cmd'] . ' setup.py build';
+				$python . ' setup.py build';
 			$output = array();
 			t3lib_utility_Command::exec($cmd, $output, $ret);
 			if ($ret === 0) {
-				$target = $privateDirectory . 'sphinx/1.1.3';
-				t3lib_div::rmdir($target, TRUE);
-				t3lib_div::mkdir_deep($target . '/lib/python');
+				$targetPath = $sphinxPath . $version;
+				t3lib_div::rmdir($targetPath, TRUE);
+				t3lib_div::mkdir_deep($targetPath . '/lib/python');
 
 				$cmd = 'cd ' . escapeshellarg(dirname($setupFile)) . ' && ' .
-					'export PYTHONPATH=' . escapeshellarg($target. '/lib/python') . ' && ' .
-					$python['cmd'] . ' setup.py install --home=' . escapeshellarg($target) . ' 2>&1';
+					'export PYTHONPATH=' . escapeshellarg($targetPath . '/lib/python') . ' && ' .
+					$python . ' setup.py install --home=' . escapeshellarg($targetPath) . ' 2>&1';
 				$output = array();
 				t3lib_utility_Command::exec($cmd, $output, $ret);
-				if ($ret !== 0) {
-					$content .= $this->formatError('Could not install Sphinx 1.1.3:' . LF . LF . implode($output, LF));
+				if ($ret === 0) {
+					$out[] = $this->formatInformation('Sphinx ' . $version . ' has successfully been installed.');
+				} else {
+					$out[] = $this->formatError('Could not install Sphinx ' . $version . ':' . LF . LF . implode($output, LF));
 				}
 			} else {
-				$content .= $this->formatError('Could not build Sphinx 1.1.3:' . LF . LF . implode($output, LF));
+				$out[] = $this->formatError('Could not build Sphinx ' . $version . ':' . LF . LF . implode($output, LF));
 			}
 		}
-
-		return $content;
-	}
-
-	/**
-	 * Retrieves python executable information.
-	 *
-	 * @return array
-	 */
-	protected function getPython() {
-		// TODO: use configuration's binPath?
-		$paths = array(
-			'/usr/bin/',
-			'/usr/local/bin/',
-		);
-		$result = array(
-			'cmd'     => '',
-			'version' => '',
-		);
-
-		// Try default command first
-		$cmd = t3lib_utility_Command::exec('which dpython', $_, $ret);
-		if ($ret === 0) {
-			$result['cmd'] = $cmd;
-		} else {
-			foreach ($paths as $path) {
-				$files = t3lib_div::getFilesInDir($path);
-				$files = array_filter(
-					$files,
-					function($e) use ($path) {
-						return preg_match('/^python(-?[0-9.-]+)?$/', $e) && is_executable($path . $e);
-					}
-				);
-				if (count($files) > 0) {
-					// Take the highest version available
-					rsort($files);
-					$result['cmd'] = $path . $files[0];
-					break;
-				}
-			}
-		}
-
-		if ($result['cmd']) {
-			// Retrieve the version of python
-			$result['version'] = t3lib_utility_Command::exec($result['cmd'] . ' --version 2>&1');
-		}
-
-		return $result;
 	}
 
 	/**
