@@ -1,0 +1,2 @@
+# cat=basic//10; type=user[EXT:sphinx/Classes/EM/Configuration.php:&Tx_Sphinx_EM_Configuration->getVersions]; label=Sphinx version: Please select the Sphinx version to be used.
+version =
